clusters/cluster/apps/media/qbittorrent/deployment-qbittorrent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent:latest
        ports:
        - containerPort: 8080
        - containerPort: 6881
        - containerPort: 6881
          protocol: UDP
        volumeMounts:
        - name: config-volume
          mountPath: /config
          subPath: media/qbittorrent
        - name: downloads-volume
          mountPath: /downloads
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: config-pvc
      - name: downloads-volume
        persistentVolumeClaim:
          claimName: downloads-pvc
