clusters/cluster/apps/media/qbittorrent/service-qbittorrent.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: apps
spec:
  selector:
    app: qbittorrent
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
    - protocol: TCP
      port: 6881
      targetPort: 6881
      name: p2p-tcp
    - protocol: UDP
      port: 6881
      targetPort: 6881
      name: p2p-udp
