clusters/cluster/apps/media/qbittorrent/ingress-qbittorrent.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  namespace: apps
spec:
  rules:
    - host: qbittorrent.${cluster_domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
